# SecureVision

./: .gitignore  CMakeLists.txt  README.md  components.pri  manager.pri  pages.pri  readme.md  secureVision.pro  secureVision.qrc  secureVision.ui  sendTolinux.txt
Resource/: secureVision.qrc
ai/: CMakeLists.txt  aidetectionthread.cpp  aidetectionthread.h  aidetectionthread.h.lBBerI  aitypes.h  detectionvisualizer.cpp  detectionvisualizer.h  facedatabase.cpp  facedatabase.h  facerecognitionmanager.cpp  facerecognitionmanager.h  motiondetector.cpp  motiondetector.h  test_facedatabase.cpp
capture/: CMakeLists.txt  camerathread.h  capturethread.h  recordmanager.cpp  recordmanager.h  rtspthread.cpp  usbcapturethread.cpp  usbcapturethread.h
core/: CMakeLists.txt  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h
include/: secureVision.h
include/components/: AudioUploader.h  MonitorWidget.h  capturethread.h
include/components/capture/: camerathread.h  rtspthread.h
include/manager/: Device.h  DeviceManager.h
include/pages/: AudioDetectionPage.h  DetectionListPage.h  MonitorListPage.h  ShowMonitorPage.h
main/: CMakeLists.txt  main.cpp  secureVision.cpp  secureVision.h
src/: main.cpp  secureVision.cpp
src/components/: AudioUploader.cpp  CardWidget.cpp  MonitorWidget.cpp  QcustomPlot.cpp  RecordingDialog.cpp  WaveFormManager.cpp  camerathread.cpp
src/components/capture/: camerathread.cpp  rtspthread.cpp
src/manager/: Device.cpp  DeviceManager.cpp
src/pages/: AudioDetectionPage.cpp  DetectionListPage.cpp  MonitorListPage.cpp  ShowMonitorPage.cpp  VideoDetectionPage.cpp
ui/: AudioDetectionPage.cpp  AudioDetectionPage.h  CMakeLists.txt  DetectionListPage.cpp  DetectionListPage.h  MonitorListPage.cpp  MonitorListPage.h  ShowMonitorPage.cpp  ShowMonitorPage.h  VideoDetectionPage.cpp  VideoDetectionPage.h  facemanagementwidget.cpp  facemanagementwidget.h  faceregistrationdialog.cpp  faceregistrationdialog.h
widgets/: AudioUploader.cpp  CMakeLists.txt  CardWidget.cpp  CardWidget.h  MonitorWidget.cpp  QcustomPlot.cpp  RecordingDialog.cpp  RecordingDialog.h  WaveFormManager.cpp  WaveFormManager.h  aicontrolwidget.cpp  aicontrolwidget.h
